--- a/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
+++ b/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
@@ -5032,7 +5032,7 @@ int main() {
   <code>int *uk;</code>
   <p>Переменная создана, но она не проинициализирована, она никуда не указывает. Чтобы это исправить, создадим переменную типа int и запишем ее адрес в указатель</p>
   <code>int d = 5;</code>
-  <code>uk = &d;;</code>
+  <code>uk = &d;</code>
   <p>Здесь знак & это оператор, который по заданной переменной d находит ее адрес в памяти. Вычисляется адрес переменной d и записывается в uk.</p>
   <p>Указатель хранит в себе адрес переменной. Чтобы получить значение переменной нужно выполнить операцию разименования указателя. Для этого служит оператор звездочка *. Оператор звездочка * является обратным к оператору амперсанд &. Результатом является, в нулевом приближении, значение хранящееся в области памяти, на которую указывает оператор звездочка *.</p>
   <p>Пока uk указывает на переменную d, выражение *uk это практически псевдоним d. Можно брать (*uk) в скобки, чтобы понять что это не операция умножения, а операция разименования.</p>
@@ -5204,4 +5204,401 @@ int main() {
 </pre>
 
   <p>Во втором способе применение указателей дает небольшое ускорение - порядка 10%.</p>
+
+  <details>
+    <summary>Задача 1. Куда бы указать?</summary>
+    <p>На черном рынке вы добыли два указателя. По законам вашей страны с собой нельзя носить больше одного указателя, поэтому вы решили пойти на хитрость - сделать так, чтобы эти два указателя указывали в одно место: так поймавший вас жандарм может принять их за один. Сделайте это!</p>
+
+    <h4>Техническая часть</h4>
+
+    <p>Вам необходимо написать часть программы, в результате работы которой два объявленных выше указателя начинают указывать на одно и то же место в памяти. Гарантируется, что выше объявлено два указателя ptr1 и ptr2, оба имеют тип int*.</p>
+<pre>
+ptr1 = ptr2;
+</pre>
+  </details>
+
+  <details>
+    <summary>Задача 2. Заполнение массива</summary>
+
+    <p>За участие в олимпиаде вам подарили массив размера n. Однако, поскольку вы заняли k-е место, то вместо того, чтобы просто отдать вам массив, вам дали указатель на его k-ю позицию в 0-нумерации. Теперь вы хотите заполнить его числами от n до 1 по убыванию.</p>
+
+    <h4>Техническая часть</h4>
+
+    <p>Вам необходимо реализовать часть программы, в результате работы которой в данном массиве окажутся числа от n до 1, идущие в массиве по убыванию. Гарантируется, что где-то выше объявлены и проинициализированы переменные n, k, считывать их не нужно. Также объявлен указатель ptr, указывающий на k-й элемент массива в 0 нумерации.</p>
+
+    <h4>Sample Input:</h4>
+    <code>5 3</code>
+
+    <h4>Sample Output:</h4>
+    <code>5 4 3 2 1</code>
+<pre>
+for (int i = n; i > 0; i--) {
+  *(ptr - k + n - i) = i;
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Задача 3. Сколько указателей?</summary>
+
+    <p>На огороде вы вырастили 10 указателей, и пришла пора собирать плоды! К сожалению, некоторые указатели еще не выросли - они указывают на нулевой указатель. Все остальные - на какие-либо переменные. Вам необходимо написать часть программы, которая посчитает, сколько из данных указателей указывают на переменную.</p>
+
+    <h4>Техническая часть</h4>
+
+    <p>Выше объявлено 10 указателей с именами a1 a2 a3 ... a10. Каждый из них указывает либо на реальную переменную, либо в нулевой указатель. Вам необходимо создать переменную ans и положить в нее количество указателей, указывающих на переменную.</p>
+<pre>
+int ans = 0;
+if (a1 != nullptr) ans++;
+if (a2 != nullptr) ans++;
+if (a3 != nullptr) ans++;
+if (a4 != nullptr) ans++;
+if (a5 != nullptr) ans++;
+if (a6 != nullptr) ans++;
+if (a7 != nullptr) ans++;
+if (a8 != nullptr) ans++;
+if (a9 != nullptr) ans++;
+if (a10 != nullptr) ans++;
+</pre>
+  </details>
+
+  <details>
+    <summary>Задача 4. Какого размера массив?</summary>
+
+    <p>Вы подглядели у вашего друга массив. Теперь у вас есть несколько указателей на него. На массив, конечно, не на друга. Теперь вы хотите узнать, насколько у него маленький массив. Другими словами, вы хотите найти такое минимальное число k, что в массиве размера k можно создать все указатели, данные вам. Например, если у вас есть три указателя, которые указывают на 3-й, 4-й и 7-й элементы, то ответом будет 5 - достаточно взять подмассив исходного с третьего по седьмой элемент.</p>
+
+    <h4>Техническая часть</h4>
+    <p>Где-то выше объявлена переменная n и массив указателей a размера n. Гарантируется, что все указатели в этом массиве указывают на какие-то элементы массива вашего друга. Сам массив содержит в себе элементы типа int*. Вам необходимо создать переменную ans и положить в нее минимально возможный размер массива друга</p>
+<pre>
+int *minPtr = a[0], *maxPtr = a[0];
+for (int i = 0; i &lt; n; i++) {
+  if (a[i] > maxPtr) maxPtr = a[i];
+  if (minPtr > a[i]) minPtr = a[i];
+}
+int ans = maxPtr - minPtr + 1;
+</pre>
+  </details>
 </article>
+
+
+<!-- 4.2 Передача параметров в функцию -->
+<article class="article">
+  <div class="anchor" id="p4.2"></div>
+  <h3>4.2 Передача параметров в функцию</h3>
+
+  <p>Рассмотрим межфункциональное взаимодействие с использованием указателей и ссылок. Можно передать переменную в функцию по указателю.</p>
+
+  <p>Рассмотрим простой пример. Функция sqr() принимает число и возвращает его квадрат. Чтобы изменить переменную a на ее квадрат, нужно записать a = sqr(a);. При этом сначала значение переменной a копируется во временную переменную x, значение переменной x возводится в квадрат, копируется значение переменной x в переменную a.</p>
+
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int sqr(int x) {
+  return x * x;
+}
+
+int main() {
+  int a = 57;
+  a = sqr(a);
+  cout &lt;&lt; a &lt;&lt; endl; // 3249
+
+  int dp[10][10][11][17];
+  int i = 5, j = 7, k = 9, l = 11;
+
+  dp[i][j][k][l] = sqr(dp[i][j][k][l]);
+  // место, где расположено dp[i][j][k][l],
+  // будет вычисляться дважды
+
+  return 0;
+}
+</pre>
+
+  <p>Двух лишних копирований можно избежать если передавать в функцию не переменную, а указатель на нее.</p>
+
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+void sqr(int *x) {
+  *x *= (*x);
+}
+
+int main() {
+  int a = 57;
+  sqr(&a);
+  cout &lt;&lt; a &lt;&lt; endl; // 3249
+
+  int dp[10][10][11][17];
+  int i = 5, j = 7, k = 9, l = 11;
+
+  sqr(&dp[i][j][k][l]);
+  // место, где расположено dp[i][j][k][l],
+  // теперь вычисляется лишь один раз
+
+  return 0;
+}
+</pre>
+
+  <h4>Передача массива в функцию</h4>
+  <p>Мы можем передавать в функцию и массив. По указателю на начало массива проблематично узнать количество элементов в нем. Но можно передать еще и указатель на конец массива.</p>
+
+<pre>
+#incude &lt;iostream&gt;
+#include &lt;memory.h&gt;
+
+using namespace std;
+
+int fillArray(int* ukbegin, int* ukend) {
+  int i = 0;
+  for (int* uk = ukbegin; uk != ukend; ++uk) {
+    *uk = i++;
+  }
+
+  return ukend - ukbegin;
+}
+
+int main() {
+  const int n = 20;
+  int a[n];
+  // заполняем массив нулями
+  memset(a, 0, sizeof(a));
+  for (int i = 0; i &lt; n; ++i) {
+    cout &lt;&lt; a[i] &lt;&lt; ' ';
+  }
+  cout &lt;&lt; endl;
+
+  cout &lt;&lt; fillArray(a, a + 10) &lt;&lt; endl; // 10
+  for (int i = 0; i &lt; n; ++i) {
+    cout &lt;&lt; a[i] &lt;&lt; ' ';
+  }
+  cout &lt;&lt; endl;
+
+  cout &lt;&lt; fillArray(a + 5, a + 13) &lt;&lt; endl; // 8
+  for (int i = 0; i &lt; n; ++i) {
+    cout &lt;&lt; a[i] &lt;&lt; ' ';
+  }
+  cout &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+
+  <p>Указатели на одинаковый тип можно вычитать друг из друга и тогда будет вычислено расстояние между ними, выраженное в количестве переменных этого типа, которые могут уместиться между ними. Например, начало включительно, а конец - нет.</p>
+  <p>Классическим примером является функция swap(), которая принимает две переменные и меняет их значения местами. Для этого нужно передать в функцию указатели на две переменные, как это показано в первом примере.</p>
+<pre>
+по указателю
+#include &lt;iostream&gt;
+
+using namespace std;
+
+void swap(int* a, int* b) {
+  int tmp = *a;
+  *a = *b;
+  *b = tmp;
+}
+
+int main() {
+  int x = 5;
+  int y = 7;
+  swap(&x, &y);
+  cout &lt;&lt; x &lt;&lt; ' ' &lt;&lt; y &lt;&lt; endl; // 7 5
+
+  return 0;
+}
+</pre>
+
+  <p>Если передавать в функцию сами переменные, то с исходными переменными ничего не произойдет, как это показано во втором примере. В этом случае вы скопировали переменные и функция меняла местами копии переменных.</p>
+<pre>
+по значению
+#include &lt;iostream&gt;
+
+using namespace std;
+
+void swap(int a, int b) {
+  int tmp = a;
+  a = b;
+  b = tmp;
+}
+
+int main() {
+  int x = 5;
+  int y = 7;
+  swap(&x, &y);
+  cout &lt;&lt; x &lt;&lt; ' ' &lt;&lt; y &lt;&lt; endl; // 5 7
+
+  return 0;
+}
+</pre>
+
+  <p>Чтобы передавать в функцию указатели, нужно при вызове функций, приписывать амперсанды к переменным. Но можно использовать и ссылки.</p>
+
+  <h4>Ссылки: псевдонимы переменных</h4>
+
+  <p>Ссылка очень похожа на указатель. Отличие в том, что значение указателя можно поменять и он будет указывать на другой адрес. Ссылка всегда указывает на один адрес.</p>
+  <p>Чтобы понять как работает ссылка, рассмотрим пример. Объявим ссылку int& link = a;. Теперь link это еще одно имя переменной a. Область видимости link такая же как у переменной a.</p>
+
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int a = 5;
+  int& link = a;
+  cout &lt;&lt; link &lt;&lt; endl; // 5
+
+  link = 7;
+  cout &lt;&lt; a &lt;&lt; endl; // 7
+
+  a *= 2;
+  cout &lt;&lt; link &lt;&lt; endl; // 14
+
+  return 0;
+}
+</pre>
+
+  <p>Такая ссылка очень удобная при использовании многомерных массивов.</p>
+  <p>Например, если мы работаем с переменной dp[i][j][k][l], то нехорошо ее использовать по нескольку раз и заставлять компилятор по нескольку раз вычислять положение переменной в массиве по переменным i, j, k, l.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int dp[5][7][9][12];
+  dp[2][3][5][7] = 5;
+  dp[2][3][5][7] *= dp[2][3][5][7] + 3;
+  int a = dp[2][3][5][7] / 38;
+  cout &lt;&lt; dp[2][3][5][7] * 2 - 5 + a &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+
+  <p>Вместо этого, имеет смысл завести ссылку link на dp[i][j][k][l] и работать дальше с link. Это и удобнее и эффективнее.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int dp[5][7][9][12];
+  int &link = dp[2][3][5][7];
+  link = 5;
+  link *= link + 3;
+  int a = link / 38;
+  cout &lt;&lt; link * 2 - 5 + 5 &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+
+  <h4>Передача параметров по ссылке</h4>
+
+  <p>Рассмотрим передачу переменных в функцию по ссылке. Теперь вместо звездочек * d в описании параметров функции стоят амперсанды &. Это означает что в функцию мы передали две переменные, которые внутри функции будут называтья a и b. Копирование при этом не происходит. Ведь a и b это лишь ссылки, на объявленные в другом месте, переменные. И в результате swap-а их значения будут изменяться</p>
+  <p>Аналогично реализуется и функция возведения в квадрат.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+void ewap(int &a, int &b) {
+  int t = a;
+  a = b;
+  b = t;
+}
+
+void sqr(int &x) {
+  x *= x;
+}
+
+int main() {
+  int p = 5;
+  int q = 7;
+  swap(p, q);
+  cout &lt;&lt; p &lt;&lt; ' ' &lt;&lt; endl; // 7 5
+  sqr(p);
+  cout &lt;&lt; p &lt;&lt; endl; // 49
+
+  return 0;
+}
+</pre>
+
+  <h4>По ссылке или по значению? По значению - бессмысленно</h4>
+
+  <p>Рассмотрим функцию, которая принимает два параметра a и b и увеличивает a. Как передать переменные? По ссылке или по значению? Если передать обе переменные по значению, то функция будет бессмысленной. Будут скопированы два значения без изменения исходных переменных.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+void inc(int x, int y) {
+  x += y * y;
+}
+
+int main() {
+  int a = 5;
+  int b = 7;
+
+  inc(a, b);
+  cout &lt;&lt; a &lt;&lt; endl; // 5
+
+  return 0;
+}
+</pre>
+
+  <p>По ссылке - лучше, но не идеально. В этом случае все хорошо работает если мы передаем по ссылке переменные. Но если мы передаем число, то возникает ошибка компиляции. Передавать по ссылке можно только переменную.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;memory.h&gt;
+
+using namespace std;
+
+void inc(int &x, int &y) {
+  x += y * y;
+}
+
+int main() {
+  int a = 5;
+  int b = 7;
+
+  inc(a, b);
+  cout &lt;&lt; a &lt;&lt; endl; // 54
+
+  inc(a, 3); // не компилируется
+
+  return 0;
+}
+</pre>
+
+  <p>Можно комбинировать! Одну переменную передать по ссылке, а другую по значению.</p>
+
+<pre>
+#include &lt;iostream&gt;
+#include &lt;memory.h&gt;
+
+using namespace std;
+
+void inc(int &x, int y) {
+  x += y * y;
+}
+
+int main() {
+  int a = 5;
+  int b = 7;
+
+  inc(a, b);
+  cout &lt;&lt; a &lt;&lt; endl; // 54
+
+  inc(a, 3);
+  cout &lt;&lt; a &lt;&lt; endl; // 14
+
+  return 0;
+}
+</pre>
+
+  <p>Мы рассмотрели только базовую работу с указателями и ссылками. Мы еще не рассматривали модификаторы const и работу с динамической памятью. Если описывать все возможности работы с указателями и ссылками, то надо описать половину работы всего языка C++.</p>
+</article>
+
