--- a/src/components/code/code-c/c-books/pages/elem-book9.html
+++ b/src/components/code/code-c/c-books/pages/elem-book9.html
@@ -1919,6 +1919,277 @@ void printArray(const int grades[][EXAMS], int pupils, int tests) {
 <article class="article">
   <div class="anchor" id="p7"></div>
   <h3>7 Указатели в C (263)</h3>
+
+  <h4>7.1 Введение (264)</h4>
+
+  <h4>7.2 Определение и инициализация переменных-указателей (264)</h4>
+
+  <p>Указатель это переменная, значением которой является адрес в памяти другой переменной. Переменная непосредственно ссылается на значение, а указатель косвенно ссылается на значение. Ссылка на значение через указатель это косвенная адресация. Указатели могут ссылаться на объекты любого типа.</p>
+  <p>Указатель инициализируют адресом. Если указатель ни на что не ссылается, то его надо инициализировать значением 0 или NULL. Лучше использовать NULL, потому что 0 сперва преобразовывается к указателю соответствующего типа.</p>
+
+  <h4>7.3 Операции над указателями (265)</h4>
+
+  <p>Если y это переменная, &y это адрес переменной, то указателю yPtr можно присвоить адрес переменной y.</p>
+  <code>int y = 5; int *yPtr = &y;</code>
+  <p>Указатель yPtr указывает на переменную y.</p>
+  <p>Операция взятия адреса & не может применяться к константам, выражениям или к переменным объявленным со словом register.</p>
+  <p>Операция косвенной адресации * (разыменование) возвращает значение объекта на который ссылается указатель.</p>
+
+  <details>
+    <summary>Программа 44 (266)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int a;
+  int *aPtr;
+  a = 7;
+  aPtr = &a;
+
+  printf("Addres a is %p\nValue aPtr is %p\n", &a, aPtr);
+  printf("&*aPtr = %p\n*&aPtr = %p\n", &*aPtr, *&aPtr);
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>7.4 Вызов по ссылке (268)</h4>
+
+  <p>Параметры в функцию можно передать двумя способами: по значению и по ссылке. Все вызовы в языке Си являются вызовами по значению. В этом случае <strong>всегда создается копия</strong> каждого передаваемого параметра.</p>
+  <p>Если нужно обработать в функции большой объект, то на создание копии потребуется дополнительное время и память. Чтобы этого избежать в функцию передают не сам объект, а указатель на него. То есть адрес в памяти этого объекта.</p>
+  <p>Оператор return возвращает из функции одно значение, тип которого заранее определен при объявлении функции. Если функции нужно изменить значения переданных ей переменных, то передают не сами переменные, а указатели на них. То есть адреса в памяти этих переменных.</p>
+
+  <p>Рассмотрим две программы, вычисляющие куб целого числа. В первой программе используется функция cubeByValue, в которую число передается по значению, функция возвращает куб этого числа.</p>
+
+  <details>
+    <summary>Программа 45 (268)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int cubeByValue(int);
+
+int main() {
+  int number = 5;
+  printf("Number before = %d", number);
+  number = cubeByValue(number);
+  printf("Number after = %d", number);
+
+  return 0;
+}
+
+int cubeByValue(int n) {
+  return n * n * n;
+}
+</pre>
+  </details>
+  <p>Во второй программе используется функция cubeByReference, в которую передается адрес переменной, содержащей число. Функция ничего не возвращает, она изменяет значение переменной по переданному адресу.</p>
+
+  <details>
+    <summary>Программа 46 (269)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int cubeByReference(int *);
+
+int main() {
+  int number = 5;
+  printf("Number before = %d", number);
+  cubeByReference(&number);
+  printf("Number after = %d", number);
+
+  return 0;
+}
+
+void cubeByReference(int *nPtr) {
+  *nPtr = *nPtr * *nPtr * *nPtr;
+}
+</pre>
+  </details>
+
+  <p>В заголовке функции, принимающей в качестве аргумента <strong>одномерный массив</strong>, в качестве параметра можно использовать или <strong>одномерный массив</strong> или <strong>указатель</strong>. Когда в качестве параметра используется <strong>указатель</strong> int *, компилятор не знает придет ли в функцию <strong>одиночная переменная</strong> или <strong>одномерный массив</strong>.Когда в качестве параметра используется <strong>одномерный массив</strong> int [], компилятор преобразует этот параметр в указатель <strong>int *</strong>.</p>
+
+  <h4>7.5 Использование квалификатора const с указателями (272)</h4>
+
+  <p>Квалификатор const сообщает компилятору, что значение переменной нельзя изменять.</p>
+
+  <p>Существует шесть вариантов использования квалификатора const с параметрами функции - два при передаче параметра по значению и четыре при передаче параметра по ссылке. Всегда используйте const если функция не должна изменять переданные ей параметры.</p>
+  <p>Все вызовы в языке Си это вызовы по значению. При вызове функции, создается копия аргумента. Если эту копию можно изменять, то используют первый вариант - без квалификатора const. Если эту копию нельзя изменять, то используют второй вариан - с квалификатором const в списке параметров функции.</p>
+  <p>Теперь рассмотрим четыре варианта вызова по ссылке. Если указатель и данные, на который он указывает можно изменять, то используют первый вариант - без квалификатора const. Еще три варианта это неконстантный указатель на константные данные, константный указатель на неконстантные данные и константный указатель на константные данные.</p>
+
+  <p>Преобразование букв нижнего регистра в верхний с помощью неконстантного указателя на неконстантные данные</p>
+
+  <details>
+    <summary>Программа 47 (274)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;ctype.h&gt;
+
+void convertToUppercase(char *);
+
+int main() {
+  char string[] = "characters and $32.98";
+  printf("String before %s\n", string);
+  convertToUppercase(string);
+  printf("String after %s\n", string);
+
+  return 0;
+}
+
+void convertToUppercase(char *sPtr) {
+  while (*sPtr != '\0') {
+    if (islower(*sPtr)) {
+      *sPtr = toupper(*sPtr);
+    }
+    sPtr++;
+  }
+}
+</pre>
+  </details>
+
+  <p>Печать строки по одному символу с помощью неконстантного указателя на константные данные</p>
+
+  <details>
+    <summary>Программа 48 (275)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+void printCharacters(const char *);
+
+int main() {
+  char string[] = "print characters of a string";
+  puts("The string is ")
+  printCharacters(string);
+  puts("");
+
+  return 0;
+}
+
+void printCharacters(const char *sPtr) {
+  while (*sPtr != '\0') {
+    printf("%c", *sPtr);
+    sPtr++;
+  }
+}
+</pre>
+  </details>
+
+  <p>Попытка изменения данных через неконстантный указатель на константные данные вызовет ошибку компиляции.</p>
+
+  <details>
+    <summary>Программа 49 (275)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+void f(const int *);
+
+int main() {
+  int y;
+  f(&y);
+
+  return 0;
+}
+
+void f(const int *xPtr) {
+  //xPtr нельзя использовать для изменения
+  //переменной на которую он указывает
+  *xPtr = 100;
+}
+</pre>
+  </details>
+
+  <p>Имеются отличия при передаче функции <strong>массива</strong> и <strong>структуры</strong>. При передаче массива, функции передается указатель на массив, происходит вызов по ссылке При передаче структуры, функция создает копию всей структуры, происходит вызов по значению. Создание копии требует дополнительного времени и памяти. Чтобы этого избежать нужно передавать функции указатель на структуру. Функция принимающая только адрес размером 4 байта будет выполняться быстрее, чем функция создающая копию тысячи байтов структуры. Чтобы данные структуры сохранить без изменения используйте константный указатель на константные данные.</p>
+
+  <p>При пердачи массива, по умолчанию передается константный указатель на неконстантные данные. Функция может менять элементы массива, но не может изменить указатель, который всегда будет указаывать на начало массива.</p>
+
+  <p>Попытка изменить константный указатель на неконстантные данные приведет к ошибке компиляции.</p>
+
+  <details>
+    <summary>Программа 50 (277)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int x, y;
+  int * const ptr = &x;
+
+  // допустимо менять данные
+  *ptr = 7;
+  // недопустимо менять константный указатель
+  ptr = y; // ошибка компиляции
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <p>Попытка изменить константный указатель на константные данные приводит к ошибке компиляции.</p>
+
+  <details>
+    <summary>Программа 51 (278)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int x = 5, y;
+  const int * const ptr = &x;
+  printf("%d\n", *ptr);
+  *ptr = 7; // ошибка
+  ptr = &y; // ошибка
+
+  return 0;
+}
+</pre>
+  </details>
+
+  <h4>7.6 Пузырьковая сортировка, использующая вызов по ссылке (278)</h4>
+
+  <p>Программа помещает значения в массив, сортирует их в восходящем порядке и печатает получившийся массив.</p>
+
+  <details>
+    <summary>Программа 52 (279)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+#define SIZE 10
+
+void bubbleSort(int * const, const int);
+void swap(int *, int *);
+
+int main() {
+  int a[SIZE] = {2,6,4,8,12,10,89,68,45,37};
+
+  puts("original array\n");
+  for (int i = 0; i &lt; SIZE; i++) {
+    printf("%4d", a[i]);
+  }
+
+  bubbleSort(a, SIZE);
+
+  puts("sorted array\n");
+  for (int i = 0; i &lt; SIZE; i++) {
+    printf("%4d", a[i]);
+  }
+
+  return 0;
+}
+
+void bubbleSort(int * const array, const int size) {
+  for (int pass = 0; pass &lt; size - 1; pass++) {
+    for (int j = 0; j &lt; size - 1; j++) {
+      if (array[j] > array[j + 1]) {
+        swap(&array[j], &array[j+1]);
+      }
+    }
+  }
+}
+
+void swap(int *ptr1, int *ptr2) {
+  int hold = *ptr1;
+  *ptr1 = *ptr2;
+  *ptr2 = hold;
+}
+</pre>
+  </details>
 </article>
 
 
