--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -262,7 +262,17 @@
   </li>
   <li class="yellow">2025.04.24 чт
     <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 240-260стр
-    <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 25 записать условия здач
+    <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 25 записать условия задач
     <br>3. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 24 закончить
+  </li>
+  <li class="yellow">2025.04.25 пт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 260-270стр
+    <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 26 записать условия задач
+    <br>3. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 25 начать
+  </li>
+  <li class="yellow">2025.04.26 сб
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 270-280стр
+    <br>2. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 27 записать условия здач
+    <br>3. <strong>Курс</strong> <i>2024 Спортивное программирования ЯрГУ</i> Занятие 25 закончить
   </li>
 </ol>
