--- a/src/components/alg/alg-conspect/sp/pages/elem-sp25.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp25.html
@@ -41,6 +41,8 @@
   <div class="anchor" id="p1"></div>
   <h3>ДП #3. Рюкзак</h3>
 
+  <p>Задачи о рюкзаке не решаются жадным алгоритмом, сортировки и упорядочивание нам тоже не помогуь. Здесь надо применять чистое динамическое программирование.</p>
+
   <p>Постановка задачи:</p>
   <p>У нас есть n предметов, каждый из которых имеет собственную ценность cᵢ и собственный вес wᵢ. Рюкзак способен вместить вес равный s.</p>
   <p>Вопрос:</p>
@@ -228,16 +230,29 @@ for (int i = 0; i &lt; (1 &lt;&lt; n); i++) {
 </pre>
   </details>
 
+  <p>Если в этой задаче сумма веса всех предметов меньше чем вес, который можно положить в рюкзак, то мы просто берем все предметы и кладем их в рюкзак.</p>
+
 <pre>
+// создаем матрицу, заполненную изначально нулями
 vector&lt;vector&lt;int&gt; &gt; DP(n + 1, vector&lt;int&gt;(s + 1, 0));
+// базовый случай
+// заполняется первая строка матрицы
 DP[0][0] = 1;
+
+// для каждого предмета (для каждой строки)
 for (int i = 1; i &lt;= n; i++) {
+  // копируем предыдущую строку матрицы
   for (int j = 0; j &lt;= s; j++) {
     DP[i][j] = DP[i - 1][j];
   }
   for (int j = 0; j &lt;= s; j++) {
+    // проверяем что вес который мы хотим собрать
+    // больше веса текущего предмета
+    // нельзя положить вес, превышающий вес рюкзака
     if (j >= W[i]) {
+      // если по диагонали в предыдущей строке стоит 1
       if (DP[i - 1][j - W[i]] == 1) {
+        // то в текущей ячейке ставим 1
         DP[i][j] = 1;
       }
     }
@@ -245,6 +260,7 @@ for (int i = 1; i &lt;= n; i++) {
 }
 
 int ans = 0;
+// ответ ищем в последней строке матрицы
 for (int j = 0; j &lt;= s; j++) {
   if (DP[n][j] == 1) {
     ans = j;
@@ -253,6 +269,7 @@ for (int j = 0; j &lt;= s; j++) {
 
 cout &lt;&lt; ans;
 </pre>
+
 
   <h4>Классический рюкзак</h4>
 
@@ -267,6 +284,7 @@ cout &lt;&lt; ans;
   <ul>
     <li>n * min(s, Сумма (от i=1 до n) wᵢ) ≤ 10⁷</li>
   </ul>
+  <p>Дополнительное условие говорит, что максимальный объект будет размером 10⁷. Такой объект можно создать за 1с. Еслы бы объект был еще больше, то это уже TL (превышение ограничения по времени).</p>
 
   <details>
     <summary>Рассмотрим конкретный пример:</summary>
@@ -309,8 +327,158 @@ cout &lt;&lt; ans;
 4 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
 5 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
 </pre>
+    <p>1 предмет:</p>
+<pre>
+         0  1  2  3  4  5  6  7  8  9 10 11 12 13
+0 пред.  0 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+1 пред.  0 -1 -1 -1  4 -1 -1 -1 -1 -1 -1 -1 -1 -1
+2 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+3 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+4 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+5 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+</pre>
+    <p>2 предмета:</p>
+<pre>
+         0  1  2  3  4  5  6  7  8  9 10 11 12 13
+0 пред.  0 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+1 пред.  0 -1 -1 -1  4 -1 -1 -1 -1 -1 -1 -1 -1 -1
+2 пред.  0 -1 -1 -1  4 -1 -1 -1 10 -1 -1 -1 14 -1
+3 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+4 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+5 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+</pre>
+    <p>3 предмета:</p>
+<pre>
+         0  1  2  3  4  5  6  7  8  9 10 11 12 13
+0 пред.  0 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+1 пред.  0 -1 -1 -1  4 -1 -1 -1 -1 -1 -1 -1 -1 -1
+2 пред.  0 -1 -1 -1  4 -1 -1 -1 10 -1 -1 -1 14 -1
+3 пред.  0 -1 -1 -1  4 -1 -1 -1 10 -1 -1 -1 14 -1
+4 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+5 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+</pre>
+    <p>3 предмета:</p>
+<pre>
+         0  1  2  3  4  5  6  7  8  9 10 11 12 13
+0 пред.  0 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+1 пред.  0 -1 -1 -1  4 -1 -1 -1 -1 -1 -1 -1 -1 -1
+2 пред.  0 -1 -1 -1  4 -1 -1 -1 10 -1 -1 -1 14 -1
+3 пред.  0 -1 -1 -1  5 -1 -1 -1 10 -1 -1 -1 15 -1
+4 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+5 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+</pre>
+    <p>4 предмета:</p>
+<pre>
+         0  1  2  3  4  5  6  7  8  9 10 11 12 13
+0 пред.  0 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+1 пред.  0 -1 -1 -1  4 -1 -1 -1 -1 -1 -1 -1 -1 -1
+2 пред.  0 -1 -1 -1  4 -1 -1 -1 10 -1 -1 -1 14 -1
+3 пред.  0 -1 -1 -1  5 -1 -1 -1 10 -1 -1 -1 15 -1
+4 пред.  0 -1 -1 -1  5 -1 -1 -1 10 -1 -1 -1 18 -1
+5 пред. -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+</pre>
+    <p>5 предмета:</p>
+<pre>
+         0  1  2  3  4  5  6  7  8  9 10 11 12 13
+0 пред.  0 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+1 пред.  0 -1 -1 -1  4 -1 -1 -1 -1 -1 -1 -1 -1 -1
+2 пред.  0 -1 -1 -1  4 -1 -1 -1 10 -1 -1 -1 14 -1
+3 пред.  0 -1 -1 -1  5 -1 -1 -1 10 -1 -1 -1 15 -1
+4 пред.  0 -1 -1 -1  5 -1 -1 -1 10 -1 -1 -1 18 -1
+5 пред.  0 -1 -1 -1  5 -1 -1 20 10 -1 -1 25 18 -1
+</pre>
+    <p>Восстановление ответа:</p>
+<pre>
+         0  1  2  3  4  5  6  7  8  9 10 11 12 13
+0 пред.  0 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
+1 пред.  0 -1 -1 -1  4 -1 -1 -1 -1 -1 -1 -1 -1 -1
+2 пред.  0 -1 -1 -1  4 -1 -1 -1 10 -1 -1 -1 14 -1
+3 пред.  0 -1 -1 -1  5 -1 -1 -1 10 -1 -1 -1 15 -1
+4 пред.  0 -1 -1 -1  5 -1 -1 -1 10 -1 -1 -1 18 -1
+5 пред.  0 -1 -1 -1  5 -1 -1 20 10 -1 -1 25 18 -1
+</pre>
   </details>
 
+<pre>
+// создаем матрицу, заполненную изначально -1
+vector&lt;vector&lt;int&gt; &gt; DP(n + 1, vector&int;int&gt;(s + 1, -1));
+// базовый случай
+// заполняется первая строка матрицы
+DP[0][0] = 0;
+
+// для каждого предмета (для каждой строки)
+for (int i = 1; i &lt;= n; i++) {
+  // копируем предыдущую строку матрицы
+  for (int j = 0; j &lt;= s; j++) {
+    DP[i][j] = DP[i - 1][j];
+  }
+  for (int j = 0; j &lt;= s; j++) {
+    // проверяем что вес который мы хотим собрать
+    // больше веса текущего предмета
+    // нельзя положить вес, превышающий вес рюкзака
+    if (j >= W[i]) {
+      // если по диагонали в предыдущей строке не стоит -1
+      if (DP[i - 1][j - W[i]] != -1) {
+        // то в текущей ячейке ставим максимум из того
+        // что было в предыдущей строке и текущий вес
+        // + вес из прошлой строки по диагонали
+        DP[i][j] = max(DP[i][j], DP[i - 1][j - W[i]] + C[i]);
+      }
+    }
+  }
+}
+
+int ans = 0;
+for (int j = 0; j &lt;= s; j++) {
+  if (DP[n][j] > ans) {
+    ans = DP[n][j];
+  }
+}
+
+cout &lt;&lt; ans;
+</pre>
+
+  <h4>Восстановление ответа</h4>
+  <p>Соберем все предметы, которые дали максимальный результат.</p>
+<pre>
+int ans = 0, pos = 0;
+vector&lt;int&gt; Res;
+
+// проходим по последней строке
+for (int j = 0; j &lt;= s; j++) {
+  // выбираем максимум
+  if (DP[n][j] > ans) {
+    // записываем максимум в ответ
+    ans = DP[n][j];
+    // запоминаем позицию максимального элемента
+    pos = j;
+  }
+}
+
+// проходим по строчкам снизу вверх
+// начинаем с позиции максимального элемента
+for (int i = n; i > 0; i--) {
+  // если значение не совпадает со значением
+  // в предыдущей строке
+  if (DP[i][pos] != DP[i - 1][pos]) {
+    // заносим предмет в результат
+    Res.push_back(i);
+    // переходим к позиции по диагонали
+    pos = pos - W[i];
+  }
+}
+
+for (int i = 0; i &lt; Res.size(); i++) {
+  cout &lt;&lt; Res[i] &lt;&lt; " ";
+}
+</pre>
+
+  <h4>Усложнения рюкзака</h4>
+  <ul>
+    <li>Предметы могут весить 0 кг. (Предметы, которые ничего не весят, всегда берутся в рюкзак)</li>
+    <li>Количество способов движения по матрице больше. (Становится более сложный выбор для определения значения в позиции DP[i][j]). Например, в текущую позицию в матрице мы можем попасть не только из строчки выше или по диагонали.</li>
+    <li>У предмета больше вариантов выбора чем берем не берем в рюкзак. (многомерный рюкзак vector&lt;vector&lt;vector&lt;int&gt; &gt; &gt;). Например, обычный рюкзак двух мерный, хранящий одно из двух значений: 0 - не берем предмет, 1 - берем предмет. Рюкзак может быть трехмерный (содержит 0, 1 или 2) или четырехмерный (0, 1, 2, 3).</li>
+  </ul>
 </article>
 
 
@@ -521,6 +689,74 @@ cout &lt;&lt; ans;
 10 3
 </pre>
   <code>This is impossible.</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include&lt;iostream&gt;
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
+
+using namespace std;
+
+
+int main() {
+  // ускорение ввода
+  ios::sync_with_stdio(false);
+  cin.tie(nullptr);
+
+  // ввод данных
+  long long E, F;
+  cin >> E >> F;
+  int n;
+  cin >> n;
+  vector&lt;pair&lt;long long, long long&gt; &gt; A(n + 1);
+  for (int i = 1; i &lt;= n; i++) {
+    cin >> A[i].first >> A[i].second;
+  }
+
+  // решение
+  // вес монет
+  long long S = F - E;
+  // матрица в которой будут все веса
+  // которые мы можем собрать из монет
+  vector&lt;int&gt; Mark(S + 1);
+  vector&lt;long long&gt; Max_val(S + 1, 0);
+  vector&lt;long long&gt; Min_val(S + 1, 1e12);
+  // когда нет монет, то стоимость равна 0
+  Min_val[0] = 0;
+
+  // базовый случай, когда монет 0
+  Mark[0] = 1;
+
+  // собираем рюкзак по слоям
+  // каждая строчка собирается из предыдущей строчки
+  // проходим по номиналам монет
+  for (int j = 1; j &lt;= n; j++) {
+    // пока вес монет помещается в копилку
+    for (int i = 0; i &lt;= S; i++) {
+      // если можем добавить еще монету
+      if (i + A[j].second &lt;= S && Mark[i] == 1) {
+        Mark[i + A[j].second] = 1;
+        Max_val[i + A[j].second] = max(Max_val[i + A[j].second], Max_val[i] + A[j].first);
+        Min_val[i + A[j].second] = min(Min_val[i + A[j].second], Min_val[i] + A[j].first);
+      }
+    }
+  }
+
+  // вывод результата
+  // если собрали необходимый вес
+  if (Mark[S] == 1) {
+    // выводим мин и макс
+    cout &lt;&lt; Min_val[S] &lt;&lt; " " &lt;&lt; Max_val[S];
+    // иначе
+  } else {
+    // выводим что это невозможно
+    cout &lt;&lt; "This is impossible.";
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -592,12 +828,12 @@ cout &lt;&lt; ans;
 
   <p>У Лаврентия есть n грамм теста, а так же m различных видов начинки. Виды начинки пронумерованы натуральными числами от 1 до m. Лаврентий знает, что i-го вида начинки у него осталось aᵢ грамм. Чтобы испечь одну булочку с i-ой начинкой, нужно ровно bᵢ грамм этой начинки и cᵢ грамм теста, а продать одну такую булочку можно за dᵢ тугриков.</p>
 
-  <p>Кроме того, он может испечь булочки без начинки. На каждую такую булочку нужно c0 грамм теста, а продать такую булочку можно за d0 тугриков. Лаврентий может испечь любое количество булочек с различными начинками или без начинки, если для этого хватит теста и начинки. Все излишки, которые остались после выпечки, Лаврентий выкидывает.</p>
+  <p>Кроме того, он может испечь булочки без начинки. На каждую такую булочку нужно c₀ грамм теста, а продать такую булочку можно за d₀ тугриков. Лаврентий может испечь любое количество булочек с различными начинками или без начинки, если для этого хватит теста и начинки. Все излишки, которые остались после выпечки, Лаврентий выкидывает.</p>
 
   <p>Определите какое максимальное количество тугриков Лаврентий может заработать.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке содержатся 4 целых числа n, m, c₀ и d₀ (1 ≤ n ≤ 1000, 1 ≤ m ≤ 10, 1 ≤ c₀, d₀ ≤ 100). В каждой из последующих m строк содержится по 4 целых числа. В i-ой из них находятся числа aᵢ, bᵢ, cᵢ и dᵢ (1 ≤ aᵢ, bᵢ, cᵢ, dᵢ ≤ 100).</p>
+  <p>В первой строке содержатся 4 целых числа n, m, c₀ и d₀ (1 ≤ n ≤ 1000, 1 ≤ m ≤ 10, 1 ≤ c₀ , d₀ ≤ 100). В каждой из последующих m строк содержится по 4 целых числа. В i-ой из них находятся числа aᵢ , bᵢ , cᵢ и dᵢ (1 ≤ aᵢ , bᵢ , cᵢ , dᵢ ≤ 100).</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — максимальное количество тугриков, которые Лаврентий может заработать.</p>
@@ -620,6 +856,84 @@ cout &lt;&lt; ans;
   <p>Чтобы получить наибольшее количество тугриков в первом примере, нужно испечь 2 булочки с начинкой 1, 4 булочки с начинкой 2 и одну булочку без начинки.</p>
 
   <p>Во втором примере имеет смысл испечь только 4 булочки без начинки.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Если решать при помощи ООП, то создаются структуры данных о булочках, сколько нужно теста, сколько начинки, сколько булочка будет стоить. Но в спортивном программировании можно не создавать структуры данных, а использовать стандартную структуру pair, вкладывать pair в pair.</p>
+<pre>
+#include&lt;iostream&gt;
+#include&lt;vector&gt;
+#include&lt;algorithm&gt;
+
+using namespace std;
+
+
+int main() {
+  // ускорение ввода
+  ios::sync_with_stdio(false);
+  cin.tie(nullptr);
+
+  // ввод данных
+  int n, m;
+  cin >> n >> m;
+  // вектор - это рюкзак
+  vector&lt;vector&lt;long long&gt; &gt; DP(m + 1, vector&lt;long long&gt;(n + 1, -1));
+  // базовый случай
+  // за 0 грамм теста получаем 0 тугриков
+  DP[0][0] = 0;
+  long long c0, d0;
+  cin >> c0 >> d0;
+
+  // нулевая строка не стандартная. если у нас нет начинки
+  // то мы можем делать булочки без начинки
+  for (int i = 1; i &lt;= n; i++) {
+    if (i % c0 == 0) {
+      DP[0][i] = DP[0][i - c0] + d0;
+    }
+  }
+
+  // аналог структуры данных Булочка
+  vector&lt;pair&lt;pair&lt;int, int&gt;, pair&lt;int, int&gt; &gt; &gt; Elem(m + 1);
+  for (int i = 1; i &lt;= m; i++) {
+    cin >> Elem[i].first.first >> Elem[i].first.second;
+    cin >> Elem[i].second.first >> Elem[i].second.second;
+  }
+
+  // вспомогательный массив
+  vector&lt;long long&gt; Buf(n + 1);
+
+  // запускаем рюкзак
+  // проходим по всем видам начинки
+  for (int i = 1; i &lt;= m; i++) {
+    // проходим по граммам теста
+    for (int j = 0; j &lt;= n; j++) {
+      // копируем предыдущую строку
+      DP[i][j] = DP[i - 1][j];
+      Buf[j] = 0;
+    }
+
+    for (int j = 0; j &lt;= n; j++) {
+      if (DP[i][j] != -1) {
+        for (int count = 1; count &lt;= Elem[i].first.first / Elem[i].first.second &&
+          count * Elem[i].second.first + j &lt;= n; count++) {
+          Buf[j + count * Elem[i].second.first] = max(Buf[j + count * Elem[i].second.first],
+          DP[i][j] + count * Elem[i].second.second);
+        }
+      }
+      DP[i][j] = max(DP[i][j], Buf[j]);
+    }
+  }
+
+  long long result = 0;
+  for (int j = 0; j &lt;= n; j++) {
+    result = max(result, DP[m][j]);
+  }
+
+  // вывод результата
+  cout &lt;&lt; result;
+}
+</pre>
+  </details>
 </article>
 
 
